Fix overflow container bug by using padding instead of outline
In PLAY-829, we removed the buffer and added an outline
so the content would not 'jump'
Use padding of the label container, but still remove the buffer

--- a/playbook/app/pb_kits/playbook/pb_selectable_card/_selectable_card.scss
+++ b/playbook/app/pb_kits/playbook/pb_selectable_card/_selectable_card.scss
@@ -28,7 +28,6 @@ $pb_selectable_card_border: 2px;
     padding: $space_sm;
     margin-bottom: $space_sm;
     cursor: pointer;
-    outline: 1px solid transparent;
 
     @media (hover:hover) {
       &:hover {
@@ -74,6 +73,9 @@ $pb_selectable_card_border: 2px;
 
         position: relative;
         @include pb_card_selected;
+        // Selected card has 1px more border
+        // Remove 1px so content does not "jump"
+        padding: calc($space_sm - 1px);
         transition-property: none;
         transition-duration: 0s;
 
